Gallery item spacing fix

--- a/less/widget-gallery.less
+++ b/less/widget-gallery.less
@@ -29,6 +29,7 @@
         display: inline-block;
         float: left;
         margin: 0 0 20px;
+        padding: 0 10px;
         position: relative;
         width: 33.3%;
         vertical-align: top;
